# extract-google-keep-notes

./: README.md  extract_notes.py  pyproject.toml
