[tool.poetry]
name = "extract-google-keep-notes"
version = "0.1.0"
description = "Extracts google Keep notes and converts them to local markdown files."
authors = ["pernulio <cpernul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
